--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -38,7 +38,7 @@ services:
     ports:
       - 8080:8080
     volumes:
-     - ./server/:/usr/src/app/
+     - ./server/:/usr/src/app/server
     restart: always
     depends_on:
       - neo4j
