--- a/server/package.json
+++ b/server/package.json
@@ -7,7 +7,7 @@
     "neo4j-driver": "^4.2.3"
   },
   "scripts": {
-    "start": "node ./server/server.js"
+    "start": "node /usr/src/app/server/server.js"
   },
   "author": "engineering@evloop.io",
   "license": "UNLICENSED"
