--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -1,3 +1,10 @@
+# FROM postgres:11-alpine
+
+# ADD .scripts/dbs/sql/build_and_seed.sql /docker-entrypoint-initdb.d
+
+# RUN chmod a+r /docker-entrypoint-initdb.d/*
+
+
 FROM node:14-alpine
 
 ARG EXPOSE_PORT
